<resources>
    <string name="app_name">BeRoutes</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_register_password">Contraseña (8 caracteres mín.)</string>
    <string name="prompt_login_password">Contraseña</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="action_login_short">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_register_short">Registrarse</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_remember_password">Recordar contraseña</string>
    <string name="app_slogan">Share your trip</string>
    <string name="action_forgetPass">¿Has olvidado tu contraseña?</string>
    <string name="action_returnToLogin">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="action_acceptTerms">Acepto los Términos y condiciones y Política de privacidad.</string>
    <string name="info_register_form">Formulario de registro</string>
    <string name="info_recoverPassTitle">Restablecer contraseña</string>
    <string name="info_recoverPass">Te enviaremos un email para que puedas restablecer tu contraseña.</string>
    <string name="action_recoverPass">Restablecer</string>
    <string name="info_loginTitle">Iniciar sesión</string>
    <string name="info_registerTitle">¿No tienes una cuenta BeRoutes?</string>
    <string name="action_choose_login">Iniciar sesión con Email</string>
    <string name="action_choose_register">Registrarse</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_search">Buscar</string>
    <string name="title_create">Crear ruta</string>
    <string name="title_activity_rute_list">RuteListActivity</string>
    <string name="description_image_list">route_image</string>
    <string name="details_exempledescript">Lorem Ipsun istin icole hasta que fisticolico de nimiluti. Bicuris di Cadi sa rese poli que kala pragmatas istem filis mu ke su aresi.</string>
    <string name="edit_profile_fragment">Editar Perfil</string>
    <string name="sign_out_fragment">Salir</string>

    <!-- Strings related to Routes Creation -->
    <string name="exampleImagen">Imagen de ejemplo</string>
    <string name="tittle">Título</string>
    <string name="selectCategory">Selecciona una categoría abajo:</string>
    <string name="examplePrice">1000</string>
    <string name="price">€ por persona</string>
    <string name="exampleDays">5</string>
    <string name="description">Descripción:</string>
    <string name="days">dias</string>
    <string name="create">Crear</string>
    <string name="photos">Fotos</string>
    <string name="map">Mapa</string>
    <string name="uploadImagen">Cargar imagen</string>
    <string name="title_activity_maps">Map</string>
    <string name="UploadImgs">Subir imagenes</string>
    <string name="SelectImgs">Seleccionar imagenes</string>
    <string name="detailsroute_image">detailsRoute_image</string>
    <string name="sanfrancisco_description">La niebla cubriendo las aguas de la bahía y, de fondo, el emblemático puente rojizo de Estados Unidos.</string>
    <string name="capadocia_description">Característica por tener uno de los monumentos naturales más impresionantes del mundo, con sus infinitas formaciones rocosas de giros imposibles, que atrapan hasta al más distraído.</string>
    <string name="capadocia_title">Capadocia</string>
    <string name="capadocia_days">3 días</string>
    <string name="capadocia_price">350€ por persona</string>
    <string name="sanfrancisco_title">San Francisco</string>
    <string name="sanfrancisco_days">5 días</string>
    <string name="sanfrancisco_price">890€ por persona</string>
    <string name="nuevayork_title">Nueva York</string>
    <string name="nuevayork_days">10 días</string>
    <string name="nuevayork_description">La Gran Manzana, la ciudad que nunca duerme, la capital del mundo, Gotham, la ciudad de los rascacielos, \'New York, New York\',... Una de las ciudades más grandes del mundo.</string>
    <string name="nuevayork_price">2200€ por persona</string>
    <string name="example_categories">Naturaleza, Arte, Romántico, Relax</string>
    <string name="map_title">Mapa de la ruta:</string>
</resources>
