<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iVCargarImg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imageheight"
                    android:contentDescription="@string/exampleImagen"
                    android:src="@drawable/noimagen"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/pageHpadding">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/uploadImagen"
                        android:layout_marginTop="5dp"
                        android:id="@+id/btnCargarImg"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="16sp"
                        android:onClick="cargarImg" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tittle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/selectCategory" />

                    <Spinner
                        android:id="@+id/dynamic_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="@dimen/pageHpadding">

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/examplePrice"
                        android:inputType="number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/exampleDays"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/days" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/pageHpadding">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="80" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:shrinkColumns="*"
                    android:stretchColumns="*"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="@dimen/pageHpadding">

                    <TableRow>
                        <Button
                            android:id="@+id/btnDetails"
                            android:layout_height="match_parent"
                            android:layout_width="wrap_content"
                            android:background="@drawable/roundedbutton"
                            android:textColor="@android:color/white"
                            android:text="@string/create" />

                        <Button
                            android:id="@+id/btnPhotos"
                            android:layout_height="match_parent"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/roundedbutton"
                            android:textColor="@android:color/white"
                            android:text="@string/photos" />

                        <Button
                            android:id="@+id/btnMaps"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:background="@drawable/roundedbutton"
                            android:textColor="@android:color/white"
                            android:text="@string/map" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</merge>