<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ChooseLoginRegisterActivity"
    android:background="@drawable/background"
    android:backgroundTint="@color/colorPrimary"
    android:backgroundTintMode="multiply">

    <LinearLayout
        android:id="@+id/email_recoverPass_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <!-- LOGO -->
        <ImageView
            android:id="@+id/recoverPass_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo_blanco_be_route" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_slogan"
            android:textSize="14sp"
            android:textColor="@android:color/white"/>
        <!-- -->

        <!-- BOTÓN PARA ACCEDER A LA PANTALLA PARA INICIAR SESIÓN -->
        <Button
            android:id="@+id/choose_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/action_login"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/black" />
        <!-- -->

        <!-- INFO PARA EL BOTÓN DE REGISTRO -->
        <TextView
            android:id="@+id/recoverPass_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/info_registerTitle"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        <!-- -->

        <!-- BOTÓN PARA ACCEDER A LA PANTALLA PARA REGISTRARSE -->
        <Button
            android:id="@+id/choose_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/action_choose_register"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/black" />
        <!-- -->

    </LinearLayout>
</LinearLayout>