<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- top toolbar-->
    <include layout="@layout/snippet_top_generaltoolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigationView2">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_cappadocia"
                app:layout_constraintTop_toBottomOf="@+id/navigationView2"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout>

                <TextView
                    android:id="@+id/details_title_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/capadocia_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
            </LinearLayout>

            <LinearLayout>

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="11dp"
                    android:numStars="@integer/puntuation_number_stars"
                    android:rating="3"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </LinearLayout>

            <LinearLayout>

                <TextView
                    android:id="@+id/details_category_route"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="13dp"
                    android:paddingBottom="12dp"
                    android:textStyle="italic"
                    android:text="@string/example_categories"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
            </LinearLayout>

            <LinearLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="409dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="2dp"
                    tools:layout_editor_absoluteY="424dp" />
            </LinearLayout>

            <LinearLayout android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_price_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/capadocia_price"
                    android:textSize="11.5sp"
                    tools:ignore="SmallSp"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="447dp" />

                <TextView
                    android:id="@+id/details_days_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/capadocia_days"
                    android:textSize="11.5sp"
                    tools:ignore="SmallSp"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="447dp" />
            </LinearLayout>

            <LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="409dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="490dp" />
            </LinearLayout>

            <LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/capadocia_description"
                    tools:layout_editor_absoluteX="313dp"
                    tools:layout_editor_absoluteY="447dp" />
            </LinearLayout>

            <TableRow>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:textSize="12.5sp"
                    android:textStyle="bold"
                    android:text="@string/map_title"
                    tools:layout_editor_absoluteX="48dp"
                    tools:layout_editor_absoluteY="523dp" />
            </TableRow>

            <include layout="@layout/activity_maps_route_1"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

        </TableLayout>
    </ScrollView>
</LinearLayout>